--- a/portal-frontend/src/index.html
+++ b/portal-frontend/src/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel='preconnect' href='https://fonts.gstatic.com'>
   <link href='https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined' rel='stylesheet'>
+  <!-- Load environment variables -->
+  <script src="assets/env.js"></script>
 </head>
 <body>
   <app-root></app-root>
